--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 		for(let i=1;i<5000;i++){
 
-			for(let j=0;j<<Object.keys(parsedDataset).length;j++){
+			for(let j=0;j<Object.keys(parsedDataset).length;j++){
 				parsedDataset[ heads[ j ] ].push( dataset.split('\n')[i].split(',')[j].replace(/\r?\n|\r/g, "")/1 );
 		 		//console.log(dataset.split('\n')[i].split(',')[j]);
 			
